open localization: update handback repo

--- a/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/libraries.9cfbfeb7612cd8533c4ca1fee0c3e06739154905.zh-tw.xlf
+++ b/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/libraries.9cfbfeb7612cd8533c4ca1fee0c3e06739154905.zh-tw.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="zh-tw">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-47f9650" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">7f419e1fc2c9f442b08e19ede4e84f9cf6843a94</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-b5c25fc" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">94b6d965c7a39a02723b641f6551e54dd4df1f07</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tutorials\libraries.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">bba53f51d7d51d38793fe3256e910d735adfe83d</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">cc2affac42c561e4630e4e5f6d52ededbb77a46e</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2a755bae05a3ec15c08d535a5778116d3b7dd721</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">814cfaecad2106602819a1dc90161d283a2405cf</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -25,8 +25,8 @@
           <source>Developing Libraries with Cross Platform Tools</source>
           <target state="translated">使用跨平台工具開發程式庫</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source><bpt id="p1">**</bpt>Some details are subject to change as the toolchain evolves.<ept id="p1">**</ept></source>
-          <target state="translated"><bpt id="p1">**</bpt>部分詳細資料會隨著工具鏈發展而變更。<ept id="p1">**</ept></target>       </trans-unit>
+          <source>This topic hasn't been updated to the latest version of the tooling yet.</source>
+          <target state="translated">本主題尚未針對最新版工具進行更新。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>This article covers how to write libraries for .NET using cross-platform CLI tools.</source>
           <target state="translated">本文涵蓋如何使用跨平台 CLI 工具撰寫 .NET 的程式庫。</target>       </trans-unit>
