--- a/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/windows-prerequisites.8a7e42c4e05f933f36694fb44fe90ca4e73ec886.zh-tw.xlf
+++ b/ol-archive/dotnet/docs.zh-tw/master/dotnet-core/windows-prerequisites.8a7e42c4e05f933f36694fb44fe90ca4e73ec886.zh-tw.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="zh-tw">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-188fee3" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b5c088da7d1155414a08995ae0d72154af891190</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-0ca64c3" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">6383a0ce253f6f7000ed8a81b29b9e1d58914acc</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\windows-prerequisites.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">e2c0ee181bdb25ec35abcdc152cc273baf44414b</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">9a0b1e56caf5bdd655a8a0734875a3c5b17e0d6e</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2d3b236a3d438e8a2d16e1ec92b87fb9c1c3de26</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">aaf4ee8343280dd9bdee3ba971fd998f2ac5aa40</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -76,116 +76,29 @@
           <source>Make sure that your Windows installation is up-to-date and includes hotfix <bpt id="p1">[</bpt>KB2533623<ept id="p1">](https://support.microsoft.com/en-us/kb/2533623)</ept> installed through Windows Update.</source>
           <target state="translated">確定您的 Windows 安裝為最新狀態，而且包含已透過 Windows Update 安裝的 Hotfix <bpt id="p1">[</bpt>KB2533623<ept id="p1">](https://support.microsoft.com/en-us/kb/2533623)</ept>。</target>       </trans-unit>
         <trans-unit id="122" translate="yes" xml:space="preserve">
-          <source>Prerequisites with Visual Studio</source>
-          <target state="translated">使用 Visual Studio 的必要條件</target>       </trans-unit>
+          <source>Prerequisites with Visual Studio 2017</source>
+          <target state="translated">使用 Visual Studio 2017 的必要條件</target>       </trans-unit>
         <trans-unit id="123" translate="yes" xml:space="preserve">
           <source>You can use any editor of your choice to develop .NET Core applications using the .NET Core SDK.</source>
           <target state="translated">您可以使用 .NET Core SDK 以使用您選擇的任何編輯器來開發 .NET Core 應用程式。</target>       </trans-unit>
         <trans-unit id="124" translate="yes" xml:space="preserve">
-          <source>However, if you want to develop .NET Core applications on Windows using Visual Studio, there are two versions you can use:</source>
-          <target state="translated">不過，如果您想要使用 Visual Studio 在 Windows 上開發 .NET Core 應用程式，您可以使用下列兩種版本：</target>       </trans-unit>
+          <source>However, if you want to develop .NET Core applications on Windows in an integrated development environment, you can use <bpt id="p1">[</bpt>Visual Studio 2017<ept id="p1">](#visual-studio-2017)</ept>.</source>
+          <target state="translated">不過，如果您想要在整合式開發環境中於 Windows 上開發 .NET Core 應用程式，您可以使用 <bpt id="p1">[</bpt>Visual Studio 2017<ept id="p1">](#visual-studio-2017)</ept>。</target>       </trans-unit>
         <trans-unit id="125" translate="yes" xml:space="preserve">
-          <source><bpt id="p1">[</bpt>Visual Studio 2015<ept id="p1">](#visual-studio-2015)</ept></source>
-          <target state="translated"><bpt id="p1">[</bpt>Visual Studio 2015<ept id="p1">](#visual-studio-2015)</ept></target>       </trans-unit>
+          <source>To use Visual Studio 2017 to develop .NET Core apps, you'll need to have the latest version of Visual Studio installed with the <bpt id="p1">**</bpt>.NET Core cross-platform development<ept id="p1">**</ept> toolset (in the <bpt id="p2">**</bpt>Other Toolsets<ept id="p2">**</ept> section) selected.</source>
+          <target state="translated">若要使用 Visual Studio 2017 開發 .NET Core 應用程式，您必須安裝最新版本的 Visual Studio 並選取 [.NET Core 跨平台開發] 工具組 (在 [其他工具組] 區段中)。</target>       </trans-unit>
         <trans-unit id="126" translate="yes" xml:space="preserve">
-          <source><bpt id="p1">[</bpt>Visual Studio 2017 RC<ept id="p1">](#visual-studio-2017-rc)</ept></source>
-          <target state="translated"><bpt id="p1">[</bpt>Visual Studio 2017 RC<ept id="p1">](#visual-studio-2017-rc)</ept></target>       </trans-unit>
+          <source>There are different editions of Visual Studio 2017.</source>
+          <target state="translated">Visual Studio 2017 有許多種版本。</target>       </trans-unit>
         <trans-unit id="127" translate="yes" xml:space="preserve">
-          <source>Projects created with Visual Studio 2015 will be project.json-based by default while projects created with Visual Studio 2017 RC will always be MSBuild-based.</source>
-          <target state="translated">根據預設，使用 Visual Studio 2015 建立的專案會是 project.json 架構， 而以 Visual Studio 2017 RC 建立的專案則一律為 MSBuild 架構。</target>       </trans-unit>
+          <source>You can download <bpt id="p1">[</bpt>Visual Studio Community 2017<ept id="p1">](https://www.visualstudio.com/vs/visual-studio-2017/#downloadvs)</ept> for free to get started.</source>
+          <target state="translated">您可以免費下載 <bpt id="p1">[</bpt>Visual Studio Community 2017<ept id="p1">](https://www.visualstudio.com/vs/visual-studio-2017/#downloadvs)</ept> 開始使用。</target>       </trans-unit>
         <trans-unit id="128" translate="yes" xml:space="preserve">
-          <source>For more information about the format changes, see <bpt id="p1">[</bpt>High-level overview of changes<ept id="p1">](./preview3/tools/layering.md)</ept>.</source>
-          <target state="translated">如需格式變更的詳細資訊，請參閱<bpt id="p1">[</bpt>變更的高階概觀<ept id="p1">](./preview3/tools/layering.md)</ept>。</target>       </trans-unit>
+          <source>To learn more about the Visual Studio installation process, see <bpt id="p1">[</bpt>Install Visual Studio 2017<ept id="p1">](https://docs.microsoft.com/en-us/visualstudio/install/install-visual-studio)</ept>.</source>
+          <target state="translated">若要深入了解 Visual Studio 安裝程序，請參閱 <bpt id="p1">[</bpt>Install Visual Studio 2017<ept id="p1">](https://docs.microsoft.com/en-us/visualstudio/install/install-visual-studio)</ept> (安裝 Visual Studio 2017)。</target>       </trans-unit>
         <trans-unit id="129" translate="yes" xml:space="preserve">
-          <source>Visual Studio 2015</source>
-          <target state="translated">Visual Studio 2015</target>       </trans-unit>
-        <trans-unit id="130" translate="yes" xml:space="preserve">
-          <source>If you want to use Visual Studio 2015 to develop .NET Core apps, you'll need:</source>
-          <target state="translated">如果您想要使用 Visual Studio 2015 開發 .NET Core 應用程式，您將需要︰</target>       </trans-unit>
-        <trans-unit id="131" translate="yes" xml:space="preserve">
-          <source>Visual Studio 2015 Update 3.3 or later.</source>
-          <target state="translated">Visual Studio 2015 Update 3.3 或更新版本。</target>       </trans-unit>
-        <trans-unit id="132" translate="yes" xml:space="preserve">
-          <source>There are different <bpt id="p1">[</bpt>editions<ept id="p1">](https://www.visualstudio.com/vs/compare)</ept> of Visual Studio 2015.</source>
-          <target state="translated">Visual Studio 2015 有許多種<bpt id="p1">[</bpt>版本 (英文)<ept id="p1">](https://www.visualstudio.com/vs/compare)</ept>。</target>       </trans-unit>
-        <trans-unit id="133" translate="yes" xml:space="preserve">
-          <source>You can download <bpt id="p1">[</bpt>Visual Studio Community 2015<ept id="p1">](https://www.visualstudio.com/downloads/)</ept> for free to get started.</source>
-          <target state="translated">您可以免費下載 <bpt id="p1">[</bpt>Visual Studio Community 2015<ept id="p1">](https://www.visualstudio.com/downloads/)</ept> 開始使用。</target>       </trans-unit>
-        <trans-unit id="134" translate="yes" xml:space="preserve">
-          <source>To verify that you're running <bpt id="p1">[</bpt>Visual Studio 2015 Update 3.3<ept id="p1">](https://msdn.microsoft.com/library/mt752379.aspx)</ept>, do the following:</source>
-          <target state="translated">若要確認您是否正在執行 <bpt id="p1">[</bpt>Visual Studio 2015 Update 3.3<ept id="p1">](https://msdn.microsoft.com/library/mt752379.aspx)</ept>，請執行下列動作︰</target>       </trans-unit>
-        <trans-unit id="135" translate="yes" xml:space="preserve">
-          <source>On the <bpt id="p1">**</bpt>Help<ept id="p1">**</ept> menu, choose <bpt id="p2">**</bpt>About Microsoft Visual Studio<ept id="p2">**</ept>.</source>
-          <target state="translated">在 [說明] 功能表上，選擇 [關於 Microsoft Visual Studio]。</target>       </trans-unit>
-        <trans-unit id="136" translate="yes" xml:space="preserve">
-          <source>In the <bpt id="p1">**</bpt>About Microsoft Visual Studio<ept id="p1">**</ept> dialog, the version number should be 14.0.25424.00 or higher, and include "Update 3".</source>
-          <target state="translated">在 [關於 Microsoft Visual Studio] 對話方塊中，版本號碼應為 14.0.25424.00 或更高版本，並包含 "Update 3"。</target>       </trans-unit>
-        <trans-unit id="137" translate="yes" xml:space="preserve">
-          <source>If you don't have Update 3, you first need to download and install <bpt id="p1">[</bpt>Visual Studio 2015 Update 3<ept id="p1">](https://www.visualstudio.com/news/releasenotes/vs2015-update3-vs)</ept>.</source>
-          <target state="translated">如果您沒有 Update 3，則必須先下載並安裝 <bpt id="p1">[</bpt>Visual Studio 2015 Update 3<ept id="p1">](https://www.visualstudio.com/news/releasenotes/vs2015-update3-vs)</ept>。</target>       </trans-unit>
-        <trans-unit id="138" translate="yes" xml:space="preserve">
-          <source>If you have Update 3 but the version number is smaller than 14.0.25424.00, you need to download and install <bpt id="p1">[</bpt>Visual Studio 2015 Update 3.3<ept id="p1">](https://msdn.microsoft.com/library/mt752379.aspx)</ept>.</source>
-          <target state="translated">如果您有 Update 3，但版本號碼小於 14.0.25424.00，則必須下載並安裝 <bpt id="p1">[</bpt>Visual Studio 2015 Update 3.3<ept id="p1">](https://msdn.microsoft.com/library/mt752379.aspx)</ept>。</target>       </trans-unit>
-        <trans-unit id="139" translate="yes" xml:space="preserve">
-          <source>You can read more about the changes in Update 3 in the <bpt id="p1">[</bpt>release notes<ept id="p1">](https://www.visualstudio.com/news/releasenotes/vs2015-update3-vs)</ept>.</source>
-          <target state="translated">您可以在<bpt id="p1">[</bpt>版本資訊<ept id="p1">](https://www.visualstudio.com/news/releasenotes/vs2015-update3-vs)</ept>中，進一步了解 Update 3 的變更。</target>       </trans-unit>
-        <trans-unit id="140" translate="yes" xml:space="preserve">
-          <source>NuGet Manager extension for Visual Studio</source>
-          <target state="translated">Visual Studio 的 NuGet 管理員擴充功能</target>       </trans-unit>
-        <trans-unit id="141" translate="yes" xml:space="preserve">
-          <source>NuGet is the package manager for the Microsoft development platform including .NET Core.</source>
-          <target state="translated">NuGet 是 Microsoft 開發平台 (包括 .NET Core) 的封裝管理員。</target>       </trans-unit>
-        <trans-unit id="142" translate="yes" xml:space="preserve">
-          <source>You need <bpt id="p1">[</bpt>NuGet 3.5.0-beta<ept id="p1">](https://dist.nuget.org/visualstudio-2015-vsix/v3.5.0-beta/NuGet.Tools.vsix)</ept> or higher to build .NET Core apps.</source>
-          <target state="translated">您需要 <bpt id="p1">[</bpt>NuGet 3.5.0-beta<ept id="p1">](https://dist.nuget.org/visualstudio-2015-vsix/v3.5.0-beta/NuGet.Tools.vsix)</ept> 或更高版本來建置 .NET Core 應用程式。</target>       </trans-unit>
-        <trans-unit id="143" translate="yes" xml:space="preserve">
-          <source>.NET Core Tooling Preview 2</source>
-          <target state="translated">.NET Core 工具 Preview 2</target>       </trans-unit>
-        <trans-unit id="144" translate="yes" xml:space="preserve">
-          <source>Download and install the <bpt id="p1">[</bpt>.NET Core 1.0.1 - VS 2015 Tooling Preview 2<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept>.</source>
-          <target state="translated">下載並安裝 <bpt id="p1">[</bpt>.NET Core 1.0.1 - VS 2015 工具 Preview 2<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept>。</target>       </trans-unit>
-        <trans-unit id="145" translate="yes" xml:space="preserve">
-          <source>The .NET Core Tooling package installs .NET Core, project templates and other tools for Visual Studio 2015.</source>
-          <target state="translated">.NET Core 工具套件會安裝 .NET Core、專案範本和其他適用於 Visual Studio 2015 的工具。</target>       </trans-unit>
-        <trans-unit id="146" translate="yes" xml:space="preserve">
-          <source>Currently, you cannot download an offline installer for <bpt id="p1">[</bpt>.NET Core 1.0.1 - VS 2015 Tooling Preview 2<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept>.</source>
-          <target state="translated">目前，您無法下載適用於 <bpt id="p1">[</bpt>.NET Core 1.0.1 - VS 2015 工具 Preview 2<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept> 的離線安裝程式。</target>       </trans-unit>
-        <trans-unit id="147" translate="yes" xml:space="preserve">
-          <source>Instead, you have to download the <bpt id="p1">[</bpt>regular bootstrapper<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept> and run it with a command-line option (such as, <ph id="ph1">`/layout c:\path`</ph>) to get an offline layout.</source>
-          <target state="translated">因此，您必須改為下載<bpt id="p1">[</bpt>一般啟動載入器<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept>並使用命令列選項 (例如 <ph id="ph1">`/layout c:\path`</ph>) 來執行，以取得離線的版面配置。</target>       </trans-unit>
-        <trans-unit id="148" translate="yes" xml:space="preserve">
-          <source>After that, it can be used as an offline installer: just run the executable from the local path.</source>
-          <target state="translated">之後，您只要從本機路徑執行可執行檔，即可將它做為離線安裝程式。</target>       </trans-unit>
-        <trans-unit id="149" translate="yes" xml:space="preserve">
-          <source>Notice that because it's a full layout, this procedure downloads all the packages for all supported languages, which is around 1 GB in size.</source>
-          <target state="translated">請注意，由於它是完整的版面配置，因此這個程序會下載所有支援的語言套件，大小約 1 GB。</target>       </trans-unit>
-        <trans-unit id="150" translate="yes" xml:space="preserve">
-          <source>Visual Studio 2017 RC</source>
-          <target state="translated">Visual Studio 2017 RC</target>       </trans-unit>
-        <trans-unit id="151" translate="yes" xml:space="preserve">
-          <source>If you want to use Visual Studio 2017 RC to develop .NET Core apps, you'll need to have the latest version of Visual Studio RC installed with the ".NET Core and Docker (Preview)" workload selected.</source>
-          <target state="translated">如果您想要使用 Visual Studio 2017 RC 開發 .NET Core 應用程式，您必須安裝最新版本的 Visual Studio RC 並選取 [.NET Core 和 Docker (預覽)] 工作負載。</target>       </trans-unit>
-        <trans-unit id="152" translate="yes" xml:space="preserve">
-          <source>There are different editions of Visual Studio 2017 RC.</source>
-          <target state="translated">Visual Studio 2017 RC 有許多種版本。</target>       </trans-unit>
-        <trans-unit id="153" translate="yes" xml:space="preserve">
-          <source>You can download <bpt id="p1">[</bpt>Visual Studio Community 2017 RC<ept id="p1">](https://www.visualstudio.com/vs/visual-studio-2017-rc/#downloadvs)</ept> for free to get started.</source>
-          <target state="translated">您可以免費下載 <bpt id="p1">[</bpt>Visual Studio Community 2017 RC<ept id="p1">](https://www.visualstudio.com/vs/visual-studio-2017-rc/#downloadvs)</ept> 來開始使用。</target>       </trans-unit>
-        <trans-unit id="154" translate="yes" xml:space="preserve">
-          <source>To learn more about the Visual Studio installation process, see <bpt id="p1">[</bpt>Install Visual Studio 2017 RC<ept id="p1">](https://docs.microsoft.com/en-us/visualstudio/install/install-visual-studio)</ept>.</source>
-          <target state="translated">若要深入了解 Visual Studio 安裝程序，請參閱<bpt id="p1">[</bpt>安裝 Visual Studio 2017 RC (英文)<ept id="p1">](https://docs.microsoft.com/en-us/visualstudio/install/install-visual-studio)</ept>。</target>       </trans-unit>
-        <trans-unit id="155" translate="yes" xml:space="preserve">
-          <source>To verify that you're running the latest version of Visual Studio 2017 RC, do the following:</source>
-          <target state="translated">若要確認您是否正在執行最新版本的 Visual Studio 2017 RC，請執行下列動作︰</target>       </trans-unit>
-        <trans-unit id="156" translate="yes" xml:space="preserve">
-          <source>On the <bpt id="p1">**</bpt>Help<ept id="p1">**</ept> menu, choose <bpt id="p2">**</bpt>About Microsoft Visual Studio<ept id="p2">**</ept>.</source>
-          <target state="translated">在 [說明] 功能表上，選擇 [關於 Microsoft Visual Studio]。</target>       </trans-unit>
-        <trans-unit id="157" translate="yes" xml:space="preserve">
-          <source>In the <bpt id="p1">**</bpt>About Microsoft Visual Studio<ept id="p1">**</ept> dialog, the version number should be 15.0.26020.0 or higher.</source>
-          <target state="translated">在 [關於 Microsoft Visual Studio] 對話方塊中，版本號碼應為 15.0.26020.0 或更高版本。</target>       </trans-unit>
-        <trans-unit id="158" translate="yes" xml:space="preserve">
-          <source>You can read more about the changes in Visual Studio 2017 RC in the <bpt id="p1">[</bpt>release notes<ept id="p1">](https://www.visualstudio.com/en-us/news/releasenotes/vs2017-relnotes)</ept>.</source>
-          <target state="translated">您可以在<bpt id="p1">[</bpt>版本資訊<ept id="p1">](https://www.visualstudio.com/en-us/news/releasenotes/vs2017-relnotes)</ept>中，進一步了解 Visual Studio 2017 RC 的變更。</target>       </trans-unit>
+          <source>You can read more about the changes in Visual Studio 2017 in the <bpt id="p1">[</bpt>release notes<ept id="p1">](https://www.visualstudio.com/en-us/news/releasenotes/vs2017-relnotes)</ept>.</source>
+          <target state="translated">您可以在<bpt id="p1">[</bpt>版本資訊<ept id="p1">](https://www.visualstudio.com/en-us/news/releasenotes/vs2017-relnotes)</ept>中，進一步了解 Visual Studio 2017 的變更。</target>       </trans-unit>
       </group>
     </body>
   </file>
