open localization: update handback repo

--- a/ol-archive/dotnet/docs.zh-cn/master/dotnet-core/toc.d55ff8e019666abd1da95f80900583861673879c.zh-cn.xlf
+++ b/ol-archive/dotnet/docs.zh-cn/master/dotnet-core/toc.d55ff8e019666abd1da95f80900583861673879c.zh-cn.xlf
@@ -566,7 +566,7 @@
           <target state="translated"><bpt id="p1">[</bpt>global.json<ept id="p1">](core/tools/global-json.md)</ept></target>       </trans-unit>
         <trans-unit id="285" translate="yes" xml:space="preserve">
           <source><bpt id="p1">[</bpt>Porting from .NET Framework<ept id="p1">](core/porting/index.md)</ept></source>
-          <target state="translated"><bpt id="p1">[</bpt>Porting from .NET Framework<ept id="p1">](core/porting/index.md)</ept></target>       </trans-unit>
+          <target state="translated"><bpt id="p1">[</bpt>从 .NET Framework 移植<ept id="p1">](core/porting/index.md)</ept></target>       </trans-unit>
         <trans-unit id="286" translate="yes" xml:space="preserve">
           <source><bpt id="p1">[</bpt>Organizing projects for .NET Core<ept id="p1">](core/porting/project-structure.md)</ept></source>
           <target state="translated"><bpt id="p1">[</bpt>为 .NET Core 组织项目<ept id="p1">](core/porting/project-structure.md)</ept></target>       </trans-unit>
